<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:text="@string/btn_selecionarData"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btnData"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/txtSpinnerFrente"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_frente"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerFrente"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_turno"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerTurno"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/txtSpinnerLider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_lider"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerLider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtTemaDds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_tema_dds"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtProducao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_producao"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtChuva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_chuva"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtObservacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_observacao"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>