<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:clickable="true"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_texto_cartao"
                android:text="@string/txt_frente"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/verdeEscuro2"/>

            <TextView
                android:id="@+id/tvFrenteNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_data"
                android:layout_marginEnd="@dimen/margin_texto_cartao"
                android:textColor="@color/verdeEscuro2"/>

            <TextView
                android:id="@+id/tvdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/verdeEscuro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_turno"
                android:layout_marginEnd="@dimen/margin_texto_cartao"/>

            <TextView
                android:id="@+id/tvTurno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/verdeEscuro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_lider"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_texto_cartao"/>

            <TextView
                android:id="@+id/tvColaboradorNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/verdeEscuro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atualizacao"
                android:layout_marginEnd="@dimen/margin_texto_cartao"/>

            <TextView
                android:id="@+id/tvDataHoraAtualizacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/verdeEscuro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tema_dds"
                android:layout_marginEnd="@dimen/margin_texto_cartao"/>
            <TextView
                android:id="@+id/tvTemaDds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/verdeEscuro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_producao"
                android:layout_marginEnd="@dimen/margin_texto_cartao"/>

            <TextView
                android:id="@+id/tvProducao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/verdeEscuro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_chuva"
                android:layout_marginEnd="@dimen/margin_texto_cartao"/>
            <TextView
                android:id="@+id/tvChuva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/verdeEscuro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_observacao"
                android:layout_marginEnd="@dimen/margin_texto_cartao"/>

            <TextView
                android:id="@+id/tvObservacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEditar"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/btn_editar"
                android:textAlignment="viewEnd"
                android:textColor="#0000FF" />

            <TextView
                android:id="@+id/tvExcluir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/btn_excluir"
                android:textAlignment="viewEnd"
                android:textColor="#FF0000" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>