<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtFrenteNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txt_nomeDaFrente"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_divisao"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spinnerDivisao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_encarregado"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spinnerEncarregado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </Spinner>

    </LinearLayout>

</LinearLayout>