<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="5dp"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margem_para_cartoes"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_divisao"
                android:textSize="@dimen/tamanho_texto_cartoes"
                android:layout_marginEnd="@dimen/espaco_entre_textos"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNome"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margem_para_cartoes"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_unidade"
                android:layout_marginEnd="@dimen/espaco_entre_textos"
                android:textSize="@dimen/tamanho_texto_cartoes"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvUnidadeNome"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margem_para_cartoes"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_supervisor"
                android:textSize="@dimen/tamanho_texto_cartoes"
                android:layout_marginEnd="@dimen/espaco_entre_textos"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSupervisorNome"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margem_para_cartoes">

            <TextView
                android:id="@+id/tvEditar"
                android:textAlignment="viewEnd"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_editar"
                android:textColor="#0000FF"
                android:clickable="true"/>

            <TextView
                android:id="@+id/tvExcluir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_excluir"
                android:textAlignment="viewEnd"
                android:textColor="#FF0000"
                android:clickable="true"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>